<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cell_state_black_40_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/nemo_black_40"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/cell_state_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/cell_bg_default"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/loading_cell_state_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/cell_bg_default"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/cell_state_mute_audio_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:src="@color/nemo_black_40"
        android:visibility="gone" />

    <TextView
        android:id="@+id/full_display_name"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:background="@drawable/video_display_name_bg"
        android:drawableStart="@drawable/icon_mute"
        android:drawablePadding="2dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxWidth="150dp"
        android:maxLines="1"
        android:padding="3dp"
        android:textColor="@color/white_90"
        android:textSize="10sp"
        android:visibility="gone"
        tools:text="localname" />

    <TextView
        android:id="@+id/small_display_name"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:background="@drawable/video_display_name_bg"
        android:drawableStart="@drawable/icon_mute"
        android:drawablePadding="2dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:padding="3dp"
        android:textColor="@color/white_90"
        android:textSize="10sp"
        android:visibility="gone"
        tools:text="localname" />

    <ImageView
        android:id="@+id/cell_state_add_other_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/nemo_green"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/cell_state_pstn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pstn_incall"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/cell_state_add_other_failed_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/nemo_red"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/bg_turn"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_addother_imcoming_turn"
        android:visibility="gone" />


    <ImageView
        android:id="@+id/cell_state_user_profile_pic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        android:visibility="gone" />

    <TextView
        android:id="@+id/cell_state_user_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/cell_state_away_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/cell_state_pstn_incall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/cell_state_pstn_incall"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/cell_state_audio_only_incall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/cell_state_audio_only_incall"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/cell_video_mute_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/call_video_mute"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/cell_no_video_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/cell_cancel_addother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cancle_addother" />

    <ImageView
        android:id="@+id/cell_state_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_cell_state_loading_small"
        android:visibility="gone" />

    <TextView
        android:id="@+id/cell_state_user_profile_loadingname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:visibility="visible" />

</merge>